# CommonUtility

./: .gitignore  CMakeLists.txt  README.md  main.cpp
CollisionDetection/: CollisionDetectionUtil.cpp  CollisionDetectionUtil.h
Common/: CommonUtil.cpp  CommonUtil.h
IO/: IOUtil.cpp  IOUtil.h
Mesh/: GeometricObjectUtil.cpp  GeometricObjectUtil.h  MeshFeature.cpp  MeshFeatureUtil.cpp  MeshFeatureUtil.h  MeshUtil.cpp  MeshUtil.h  TriTriIntersection.cpp  TriTriIntersection.h
MeshFeature/: Color.h  MeshFeature.cpp  MeshFeature.h  MeshFeatureUtil.cpp  MeshFeatureUtil.h
Polygon/: OptimalPolygonTriangulation.cpp  OptimalPolygonTriangulation.h  PolygonUtil.cpp  PolygonUtil.h
Rendering/: RenderingUtil.h
Test/: MeshFeatureTest.cpp  MeshFeatureTest.h  TestUtil.cpp  TestUtil.h
Transformation/: TransformUtil.cpp  TransformUtil.h
Visualization/: VisualizationUtil.cpp
src/CollisionDetection/: CollisionDetectionUtil.cpp  CollisionDetectionUtil.h  TriTriIntersection.cpp  TriTriIntersection.h
src/Common/: Color.h  CommonUtil.cpp
src/IO/: IOUtil.cpp
src/ImageData/: ImageDataUtil.cpp  ImageDataUtil.h
src/Mesh/: GeometricObjectUtil.cpp  GeometricObjectUtil.h  MeshUtil.cpp  MeshUtil.h  TopologyUtil.cpp  TopologyUtil.h
src/MeshFeature/: MeshFeature.cpp  MeshFeatureUtil.h
src/Polygon/: PolygonUtil.cpp
src/Rendering/: RenderingUtil.cpp
src/Testing/: TestUtil.cpp  TestUtil.h
src/Transformation/: TransformUtil.cpp
src/Visualization/: VisualizationUtil.h
